--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/rootView">
+    android:layout_height="match_parent">
 
+    <!-- The views behind the draggable layout =================== -->
     <RelativeLayout
         android:background="#f5f5f5"
         android:layout_width="match_parent"
@@ -21,9 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </RelativeLayout>
+    <!-- =================== The views behind the draggable layout -->
 
 
-    <!-- the dragging and related views =============================================-->
+    <!-- the dragging and related views ========================== -->
     <ImageView
         android:id="@+id/imgDarkOverlay"
         android:background="#e0000000"
@@ -60,6 +61,6 @@
         android:id="@+id/viewTouchListener"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-    <!-- ============================================= the dragging and related views -->
+    <!-- ========================== the dragging and related views -->
 
 </FrameLayout>
